[FIX] sap.ui.unified.Calendar: ajust week days announcement
Issue:
- The week day elements were hidden from the
accessibility tools and although still visible
they weren't reachable via virtual cursor.

Solution:
- The week day elements are made reachable
with virtual cursor. As a result the week day
was announced twice. Therefore the week day
described by reference is also removed
from the calendar grid cells.
All grid cells from the other month in multiple
month scenario were made transparent instead of
invisible. That way the accessibility tools aren't
confused that there are less elements in the current
row and the week day announcement is correct.

BCP: 2370011630
BCP: CS20230006254299

--- a/src/sap.ui.unified/src/sap/ui/unified/themes/base/Calendar.less
+++ b/src/sap.ui.unified/src/sap/ui/unified/themes/base/Calendar.less
@@ -325,7 +325,7 @@ html.sap-desktop .sapUiCalHead > button.sapUiCalDsbl:focus,
 }
 
 .sapUiCalMulti .sapUiCalItemOtherMonth {
-	visibility: hidden;
+	opacity: 0;
 }
 
 .sapUiCalItemNow {
